  * Removed GIMP build dependency. GIMP scripts in images-source no
    longer to be run at build time; final icons should be added
    manually in source package.

  [ Evan Dandrea ]
  * Use the official Firefox icon, rather than a generic browser icon.

  [ Richard A. Johnson ]
  * Updated slideshow for Kubuntu installer
    (LP: #540348) (LP: #534949) (LP: #539147)
.

 -- Dylan McCall <dylan@dylan-laptop>  Thu, 18 Mar 2010 07:54:08 -0700

ubiquity-slideshow-ubuntu (15) lucid; urgency=low

  [ Dylan McCall ]
  * Rearranged source package to closely mirror build output.
  * Renamed ./slides to ./slideshows, reflecting new arrangement.
  * Each slideshow now has a unique slideshow.conf file.
  * Split link-core and link-default for slideshows. link-default
    is NOT symlinked to a central place, encouraging customization.
  * Generated icons now go straight to the build directory.
  * Merging new Xubuntu slideshow.
  * Merging new visuals for Kubuntu slideshow.

  [ Evan Dandrea ]
  * Fix typo in Kubuntu chat slide.
  * Move from po2html, which is no longer included in Debian, to po4a.
  * Make each slideshow package Replace and Conflict the ubiquity-
    slideshow virtual package, to ensure that only one slideshow can be
    installed at a time and so we can put all of the files in a single
    location (LP: #526483).  The upgrade slideshows do the same with the
    ubiquity-slideshow-upgrade virtual package.
  * Update update-launchpad-translations.sh to reflect recent directory
    layout changes.
  * Update translations from Launchpad.
  * Remove possibly inappropriate URL from br translation (LP: #528465).

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 26 Feb 2010 14:26:00 +0000

ubiquity-slideshow-ubuntu (14) lucid; urgency=low

  * Work around pkgstriptranslations's dislike for empty po files.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 12 Feb 2010 12:11:57 +0000

ubiquity-slideshow-ubuntu (13) lucid; urgency=low

  [ Dylan McCall ]