@@ -8,7 +8,7 @@
 	<li><em>AisleRiot Solitaire</em> allows you to select from 35 different types of solitaire! Surely there is one you will enjoy?</li>
 	<li>There are many more games in the Ubuntu repositories to install – see the Games category in <em>Ubuntu Software Center</em>.</li>
 </ul>
-<p class="special">There is a bunch of games available in the live CD as well, which you can enjoy while installing. Have fun!</p></div>
+<p class="special">There are a bunch of games available on the live CD as well, which you can enjoy while installing. Have fun!</p></div>
 
 </div>
 
