@@ -3,10 +3,10 @@
 <div class="main">
 
 <div class="content"><ul>
-	<li>If you need help, try <em>Help</em> in the Applications menu, or the help menu in most applications.</li>
-	<li>There are more ways to get help, including our IRC channel <em>#xubuntu</em> at the <a href="http://freenode.net/">Freenode</a> IRC network, which you can join by <a href="http://webchat.freenode.net/?channels=xubuntu&nick=xubuntu...&prompt=1">clicking here</a>.</li>
+	<li>If you need help, try <em>Help</em> in the Applications menu, or the help menu available in most applications.</li>
+	<li>There are more ways to get help, including our IRC channel <em>#xubuntu</em> on the <a href="http://freenode.net/">Freenode</a> IRC network, which you can join by <a href="http://webchat.freenode.net/?channels=xubuntu&nick=xubuntu...&prompt=1">clicking here</a>.</li>
 </ul>
-<p class="special">For a complete list of support methods, see the <a href="http://xubuntu.org/help">Help & Support -page</a> in our website.</p></div>
+<p class="special">For a complete list of support methods, see the <a href="http://xubuntu.org/help">Help & Support page</a> on our website.</p></div>
 
 </div>
 
