@@ -4,10 +4,10 @@
 
 <div class="content"><ul>
 	<li><em>GIMP</em> (listed under Applications &rarr; Graphics) is an image editor that allows as much or as little manipulation of the images as you choose. It can be used to construct images or modify photos and images.</li>
-	<li>For your listening pleasure, give <em>Exaile Music Player</em> a spin. It is capable of playing all your music, from mp3 to cd to live radio on the internet.</li>
-	<li>If you need to burn a CD or DVD, check out <em>Brasero</em>. It is very easy to use, and will even burn the Xubuntu image for you.</li>
+	<li>For your listening pleasure, give <em>Exaile Music Player</em> a spin. It is capable of playing all your music, from mp3 to CD to live radio on the internet.</li>
+	<li>If you need to burn a CD or DVD, check out <em>Brasero</em>. It is very easy to use and will even burn the Xubuntu image for you.</li>
 </ul>
-<p class="special">All of these applications are available in the live CD, even while installing. Go adventurous!</p></div>
+<p class="special">All of these applications are available on the live CD, even while installing. Be adventurous!</p></div>
 
 </div>
 
