@@ -7,7 +7,7 @@
 	<li>Catfish is a great application for finding those files you lost on your harddrive. It is quick and easy to use for beginners and experts alike.</li>
 	<li>Also in the accessories, you can find a slick calculator. Need to calculate disk partitions? Use the calculator, it couldn't be easier.</li>
 </ul>
-<p class="special">All of these applications are available in the live CD, even while installing. Go adventurous!</p></div>
+<p class="special">All of these applications are available on the live CD, even while installing. Be adventurous!</p></div>
 
 </div>
 
