@@ -5,7 +5,7 @@
 <div class="content"><ul>
 	<li class="nobullet">You have chosen to install the latest version of Xubuntu, 10.04.</li>
 	<li>This exciting software is brought to you free of any fees, for your use and any others you want to share it with.</li>
-	<li>Since you are installing this software using the Xubuntu Desktop CD, feel free to examine things as this installs. After the installation, the desktop will look much the same as it does now.</li>
+	<li>Since you are installing this software using the Xubuntu Desktop CD, feel free to examine things as it installs. After the installation, the desktop will look much the same as it does now.</li>
 </ul>
 <p class="special">We truly hope that you enjoy using this distribution as much as we enjoy bringing it to you.</p></div>
 
