@@ -14,9 +14,11 @@ ubiquity-slideshow-ubuntu (16) UNRELEASED; urgency=low
   [ Richard A. Johnson ]
   * Updated slideshow for Kubuntu installer
     (LP: #540348) (LP: #534949) (LP: #539147)
-.
 
- -- Dylan McCall <dylan@dylan-laptop>  Thu, 18 Mar 2010 07:54:08 -0700
+  [ Brian Murray ]
+  * resolved some grammatical issues with the xubuntu slides
+
+ -- Dylan McCall <dylanmccall@gmail.com>  Thu, 18 Mar 2010 07:54:08 -0700
 
 ubiquity-slideshow-ubuntu (15) lucid; urgency=low
 
